<resources>
    <!--    //vlozit localni ip adresu na kterem akutalne bezi server do IP_ADRESS
    10.0.2.2 emulator localhost
    my localhost 10.0.0.5
    -->
    <string name="IP_ADDRESS">10.0.0.5</string>

    <string name="app_name">Stock_App</string>
    <string name="title_stocks">Stocks</string>
    <string name="title_personal">Personal</string>
    <string name="button_add_fragmet_stock">ADD</string>
    <string name="fragment_stock_edit_text_hint">Stock Symbol</string>
    <string name="graph_button_buy">Buy</string>
    <string name="graph_button_sell">Sell</string>
    <string name="detail_button_predict">Predict Price</string>
    <string name="graph_text_view">Loading data…</string>
    <string name="graph_edit_text_amount">1</string>
    <string name="personal_text_history">Your History</string>
    <string name="ticker">Ticker</string>
    <string name="price">Price</string>
    <string name="Change">Change</string>
    <string name="ChangePercentage">Change%</string>
    <string name="personal_detail">Click item for more detail</string>
</resources>